
opp_makemake option changes:
-b,--basedir ==> -P,--projectdir
old -P option (opp_msgc windows export/import symbol) became -p
added --nmake option
added -M, --mode option
-c filename, --configfile filename option no longer exists, config file is found by calling opp_configfilepath
removed -t,--importlib option, as plain -l does the job as well

from now on, we expect perl to be available as /usr/bin/perl on ALL SYSTEMS, including Cygwin and MSYS.
why? because Ubuntu 7.10 uses a broken ("compliant"?) sh version where the magic described
on the "perlrun" man page ("eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}' ...." 
can no longer be gotten to run.



2006-10-21  ------ omnetpp-3.3 released ------

2006-10-19  Andras Varga

	* opp_nmakemake: bugfix: running it with a -I"path with space" option,
	the quotes didn't make it into the generated Makefile.vc

2006-01-12  ------ omnetpp-3.2p1 released ------

2006-01-09  Andras Varga

	* opp_nmakemake: failed if a directory name contained "++" when the -b
	option was specified

	* opp_makedep: return exit code 0 when called without args to print help

2005-10-19  ------ omnetpp-3.2 released ------

2005-10-13  Andras Varga

	* opp_makemake, opp_nmakemake: fix: internal abs2rel routine didn't 
	work for 1-char directory names

2005-09-22  Andras Varga

	* opp_neddoc.in: changed to use @@listfile syntax to invoke nedtool.

2005-08-06  Andras Varga

	* opp_nmakemake: implemented -s, -t, -d options to enable building DLLs

	* opp_makemake.in: added -t, -d options (do-nothing options) for 
	command-line compatibility with opp_nmakemake

2005-08-05  Andras Varga

	* opp_makemake.in, opp_nmakemake: added -P option (just gets passed 
	to opp_msgc)

2005-07-19  Andras Varga

	* opp_neddoc.in: changed runprog so that it gives system() a single
	string. This is necessary because we need to use the shell because
	of redirections. As documented at http://perldoc.perl.org/functions/