@@ -12,6 +12,7 @@ added --nmake option
 added -M, --mode option
 -c filename, --configfile filename option no longer exists, config file is found by calling opp_configfilepath
 removed -t,--importlib option, as plain -l does the job as well
+added -a,--make-lib option, which builds a static lib
 
 from now on, we expect perl to be available as /usr/bin/perl on ALL SYSTEMS, including Cygwin and MSYS.
 why? because Ubuntu 7.10 uses a broken ("compliant"?) sh version where the magic described
